logo nora && img nos

--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="w-100 d-flex justify-content-end">
-    <h2 class="titulo">Inicio</h2>
+    <h2 class="titulo mb-4">Inicio</h2>
   </div>
 
   <hr />
@@ -13,17 +13,17 @@
       style="color: whitesmoke"
     >
       <div class="w-100 text-white" [@enterState]>
-        <img
+        <!--  <img
           class="besidenora"
           src="https://i.ibb.co/q0rKzck/DSC-3055.jpg"
           alt=""
-        />
+        />-->
         <img src="https://i.ibb.co/wgkqJPj/NORA-Marca-BT.png" alt="" />
-        <img
+        <!-- <img
           class="besidenora"
           src="https://i.ibb.co/2yBQCVF/DSC-3016.jpg"
           alt=""
-        />
+        />-->
       </div>
       <div class="w-100">
         <h1 class="text-white" [@enterStateTwo]>Terapia basada en plantas</h1>
