--- a/src/app/views/nosotros/nosotros.component.html
+++ b/src/app/views/nosotros/nosotros.component.html
@@ -6,9 +6,13 @@
   <hr />
 
   <div class="m-4">
-    <div class="w-100 d-flex align-items-center">
+    <div class="w-100 d-flex align-items-center flex-wrap">
       <div class="w-50">
-        <h1>NORA</h1>
+        <img
+          style="width: 15rem"
+          src="https://i.ibb.co/wgkqJPj/NORA-Marca-BT.png"
+          alt=""
+        />
         <h3 style="font-style: italic">
           «...surge de un arduo trabajo de investigación y desarrollo de más de
           4 años, a través de asociaciones civiles y médicos especializados en
@@ -17,7 +21,19 @@
           aquellos que sufren patologias suceptibles de tratarse con cannabis.»
         </h3>
       </div>
-      <div class="w-50 d-flex justify-content-center"></div>
+      <div class="w-50 d-flex justify-content-center">
+        <img
+          style="
+            height: 20rem;
+            width: 20rem;
+            border-radius: 1rem;
+            border: 2px solid white;
+            max-width: 90%;
+          "
+          src="https://i.ibb.co/68Vy3bp/traz.png"
+          alt=""
+        />
+      </div>
     </div>
   </div>
   <div class="text-start">
