--- a/src/app/views/analiticas/analiticas.component.html
+++ b/src/app/views/analiticas/analiticas.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="w-100 d-flex justify-content-end">
-    <h2 class="titulo">Analíticas</h2>
+    <h2 class="titulo mb-4">Analíticas</h2>
   </div>
 
   <hr />
