--- a/src/app/views/contacto/contacto.component.html
+++ b/src/app/views/contacto/contacto.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="w-100 d-flex justify-content-end">
-    <h2 class="titulo">Contacto</h2>
+    <h2 class="titulo mb-4">Contacto</h2>
   </div>
 
   <hr />
@@ -48,7 +48,9 @@
               </mat-error>
             </mat-form-field>
             <div class="w-100 d-flex justify-content-center">
-              <button class="w-50 m-3" mat-raised-button>Enviar</button>
+              <button disabled class="w-50 m-3" mat-raised-button>
+                Enviar
+              </button>
             </div>
           </form>
         </div>
