--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,12 +1,8 @@
 <div class="container">
   <div class="w-100 d-flex justify-content-around">
-    <div class="d-flex flex-column">
-      <button mat-raised-button class="buttonn">Gestionar productos</button>
-    </div>
-    <button mat-raised-button class="buttonn">Ventas</button>
-    <button mat-raised-button class="buttonn">Órdenes generadas</button>
+    <!-- Botones Comentados -->
   </div>
-  <table class="table table-hover">
+  <table class="table table-hover mt-3">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -16,37 +12,26 @@
       </tr>
     </thead>
     <tbody class="border">
-      <tr *ngFor="let product of this.productos; let i = index">
+      <tr *ngFor="let product of productos; let i = index">
         <th scope="row">{{ i + 1 }}</th>
         <td>
           {{ product.name }}
-          <button
-            *ngIf="product.name == ''"
-            mat-raised-button
-            (click)="this.openDialog('0ms', '0ms', this.productos.length - 1)"
-          >
-            Add Product
-          </button>
         </td>
         <td>{{ product.price }}</td>
-        <td class="d-flex justify-content-around">
-          <button
-            color="primary"
-            mat-raised-button
-            (click)="this.openDialog('0ms', '0ms', i)"
-            [disabled]="product.name == ''"
-          >
+        <td class="d-flex justify-content-around align-items-center flex-wrap">
+          <button color="primary" mat-raised-button (click)="openDialog('0ms', '0ms', i)" [disabled]="product.name == ''">
             <mat-icon>edit</mat-icon>
           </button>
-          <button
-            color="warn"
-            [disabled]="product.name == ''"
-            mat-raised-button
-          >
+          <button mat-raised-button (click)="openDialogAnalytics('0ms', '0ms', i)" [disabled]="product.name == ''">
+            <mat-icon>picture_as_pdf</mat-icon>
+          </button>
+          <button color="warn" mat-raised-button (click)="deleteProduct(product)" [disabled]="product.name == ''">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </td>
       </tr>
     </tbody>
   </table>
+  <!-- Considera colocar el botón de Añadir Producto aquí -->
+  <button class="m-4" mat-raised-button (click)="openDialog('0ms', '0ms', productos.length)">Añadir Producto</button>
 </div>
