--- a/src/app/components/tiendacomp/tiendacomp.component.html
+++ b/src/app/components/tiendacomp/tiendacomp.component.html
@@ -1,7 +1,7 @@
 <div class="w-100 d-flex justify-content-center">
   <div class="row card-container w-100 d-flex justify-content-around mt-4">
     <mat-card
-      *ngFor="let product of database.data.products"
+      *ngFor="let product of products"
       class="col-md-4 text-center mt-3 mb-3 text-dark"
       style="width: 18rem; background-color: whitesmoke"
     >
