--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,7 +21,7 @@
           <div class="media m-1">
             <a href="https://web.growcast.io/" class="pull-left">
               <img
-                src="https://media.licdn.com/dms/image/C4E0BAQFkdaAqJSU8rw/company-logo_200_200/0/1630626603559/growcast_io_logo?e=1712188800&v=beta&t=U7kAwKfzAaxp02kCt0wJ8gpTxU4egdvGjTR0qZyXg-0"
+                src=""
                 style="border: 2px solid white"
                 alt=""
                 class="media-object"
@@ -29,14 +29,13 @@
               />
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Growcast</h4>
             </div>
           </div>
 
           <div class="media m-1">
             <a href="https://ceis.ar/" class="pull-left">
               <img
-                src="https://i.ibb.co/h2rxfvP/ceis.jpg"
+                src=""
                 alt=""
                 class="media-object"
                 style="border: 2px solid white"
@@ -44,7 +43,7 @@
               />
             </a>
             <div class="media-body">
-              <h4 class="media-heading">CEIS</h4>
+              <h4 class="media-heading"></h4>
             </div>
           </div>
         </div>
@@ -56,13 +55,13 @@
           ><img
             style="height: 100px; width: 150px; border: 2px solid white"
             class="img-thumbnail m-1"
-            src="https://i.ibb.co/C7kBhPk/DSC-3080.jpg"
+            src=""
             alt="DSC-3080"
         /></a>
         <a href="https://ibb.co/ch58sK6"
           ><img
             style="height: 100px; width: 150px; border: 2px solid white"
-            src="https://i.ibb.co/gZ1WcbS/DSC-3040.jpg"
+            src=""
             class="img-thumbnail m-1"
             alt="DSC-3040"
         /></a>
@@ -70,20 +69,20 @@
           ><img
             style="height: 100px; width: 150px; border: 2px solid white"
             class="img-thumbnail m-1"
-            src="https://i.ibb.co/9sbWfx9/DSC-2940.jpg"
+            src=""
             alt="DSC-2940"
         /></a>
         <a href="https://ibb.co/30PBcJ3"
           ><img
             style="height: 100px; width: 150px; border: 2px solid white"
             class="img-thumbnail m-1"
-            src="https://i.ibb.co/55JBL70/DSC-3016.jpg"
+            src=""
             alt="DSC-3016"
         /></a>
       </div>
     </div>
   </div>
   <div class="copyright text-center">
-    Copyright &copy; 2024 <span> NORA </span>
+    Copyright &copy; 2024 <span> Nike </span>
   </div>
 </footer>
