--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid align-items-center">
     <img
       class=""
-      src="https://i.ibb.co/cr8FH2f/NORA-Marca-NT.png"
+      src="https://nikearprod.vtexassets.com/assets/vtex/assets-builder/nikearprod.store/2.0.63/icons/Assets_for_off%20platform/swoosh___33f7ffaf2fc124733c2c4a60a12a1160.svg"
       alt=""
       style="width: 8rem; border-radius: 1rem"
     />
@@ -38,19 +38,6 @@
             <a class="nav-link text-black active" aria-current="page">
               <i class="bi bi-shop border rounded p-1"></i>
               Tienda</a
-            >
-          </button>
-        </li>
-        <li class="nav-item">
-          <button
-            mat-stroked-button
-            color="basic"
-            data-bs-toggle="collapse"
-            routerLink="/analiticas"
-          >
-            <a class="nav-link text-black active" aria-current="page">
-              <i class="bi bi-clipboard2-data border rounded p-1"></i>
-              Analíticas</a
             >
           </button>
         </li>
