--- a/src/app/components/tiendacomp/tiendacomp.component.css
+++ b/src/app/components/tiendacomp/tiendacomp.component.css
@@ -15,3 +15,15 @@
   right: 0rem;
   top: 3rem;
 }
+
+.success-snackbar {
+  --mdc-snackbar-container-color: green !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-mdc-snack-bar-button-color: white !important;
+  white-space: pre-wrap
+}
+
+.snackbar-error {
+  background-color: #F44336 !important  ; /* Rojo */
+  color: #FFFFFF; /* Blanco */
+}
