--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,9 +1,4 @@
 <div class="container">
-  <div class="w-100 d-flex justify-content-end">
-    <h2 class="titulo mb-4">Inicio</h2>
-  </div>
-
-  <hr />
 
   <div
     class="d-flex flex-column w-100 justify-content-center align-items-center"
@@ -13,20 +8,12 @@
       style="color: whitesmoke"
     >
       <div class="w-100 text-white" [@enterState]>
-        <!--  <img
-          class="besidenora"
-          src="https://i.ibb.co/q0rKzck/DSC-3055.jpg"
-          alt=""
-        />-->
-        <img src="https://i.ibb.co/wgkqJPj/NORA-Marca-BT.png" alt="" />
-        <!-- <img
-          class="besidenora"
-          src="https://i.ibb.co/2yBQCVF/DSC-3016.jpg"
-          alt=""
-        />-->
+
+        <img class="w-100 banner-sales mt-4 mb-4" src="https://nikearprod.vtexassets.com/assets/vtex.file-manager-graphql/images/9b2a473c-c28f-4aff-bdd2-9650fd42b7d8___4ec106d1bcf4d00204e0573038449ee2.jpg" alt="" />
+
       </div>
       <div class="w-100">
-        <h1 class="text-white" [@enterStateTwo]>Terapia basada en plantas</h1>
+        <h1 class="text-white" [@enterStateTwo]>FEEL THE UNREAL</h1>
         <hr />
 
         <h3 class="m-4">
@@ -42,7 +29,7 @@
   <div class="w-100 d-flex justify-content-center">
     <img
       class="w-100 imgg mt-4 mb-4"
-      src="https://i.ibb.co/chV2zhw/decd282f-5538-4ed8-9519-cc25c8642a91.jpg"
+      src="https://nikearprod.vtexassets.com/assets/vtex.file-manager-graphql/images/adcf19b4-e961-4cdf-b0a7-997f25783ad0___efabb85f6ff78b445753a0a99837a6e3.jpg"
       alt=""
     />
   </div>
