--- a/src/app/components/tiendacomp/tiendacomp.component.html
+++ b/src/app/components/tiendacomp/tiendacomp.component.html
@@ -1,4 +1,5 @@
 <div class="w-100 d-flex justify-content-center">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
   <div class="row card-container w-100 d-flex justify-content-around mt-4">
     <mat-card
       *ngFor="let product of products"
@@ -6,7 +7,6 @@
       style="width: 18rem; background-color: whitesmoke"
     >
       <h2 class="mb-0">{{ product.name }}</h2>
-      <h5>{{ product.contenido }}</h5>
       <hr />
       <button class="ratio" *ngIf="product.ratio" mat-fab color="accent">
         <b><p class="m-0 mt-2">Ratio</p></b>
@@ -38,20 +38,11 @@
           <button
             mat-raised-button
             class="btn btn-primary m-2"
-            (click)="addProduct({product, cantidad: 1, priceconjunto: 0})"
+            (click)="addProduct({product, cantidad: 1, priceconjunto: 0}, product.name)"
           >
             Añadir al carrito
             <mat-icon>add_shopping_cart</mat-icon>
           </button>
-          <!--
-                    <div class="d-flex">
-                        <button mat-raised-button class="w-25 m-1" color="warn">
-                            <mat-icon>delete</mat-icon>
-                        </button>
-                        <button mat-raised-button class="w-25 m-1" color="access">
-                            <mat-icon>edit</mat-icon>
-                        </button>
-                    </div>-->
         </div>
       </div>
     </mat-card>
