--- a/src/app/views/inicio/inicio.component.css
+++ b/src/app/views/inicio/inicio.component.css
@@ -1,15 +1,9 @@
+@import url('../../../styles/main.css');
+
 h1 {
   margin-top: 3rem;
   font-size: 2.3rem;
-  font-weight: 500;
-}
-
-.banner {
-  max-width: 100%;
-}
-
-img {
-  width: 30rem;
+  font-weight: 700;
 }
 
 .expo {
@@ -46,7 +40,7 @@ h3 {
 
 .mat-fab {
   position: fixed;
-  bottom: 2rem; /* Ajusta la distancia desde la parte inferior según tus necesidades */
+  bottom: 2rem;
   left: 2rem;
   z-index: 1000;
 }
@@ -61,14 +55,9 @@ h3 {
 }
 
 @media only screen and (max-width: 767px) {
-  .banner {
-    width: 100%;
-    height: 11rem;
-  }
+
   .imgg {
-    height: 12rem;
-    width: 100%;
-    border-radius: 1rem;
+    display: none;
   }
   img {
     width: 20rem;
