--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,15 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: "Montserrat", Sans-serif, Roboto, "Helvetica Neue", sans-serif;
+}
+
+.success-snackbar {
+  --mdc-snackbar-container-color: green !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-mdc-snack-bar-button-color: white !important;
+  white-space: pre-wrap
 }
