--- a/src/app/views/productselected/productselected.component.html
+++ b/src/app/views/productselected/productselected.component.html
@@ -1,1 +1,8 @@
-<p>productselected works!</p>
+<div>
+    <div>
+        <h1>dasdasdsadadsadas</h1>
+    </div>
+    <div>
+        <h2>dasdadadadsadsad</h2>
+    </div>
+</div>
