--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,9 +2,16 @@
 @import url('../../../styles/main.css');
 
 footer {
-  background: whitesmoke;
+  background: black;
   color: #aaa;
   padding-top: 10px;
+}
+
+h3 {
+  font-family: "Anton SC", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: white;
 }
 
 .boderr {
@@ -20,7 +27,6 @@ footer a:hover {
 }
 
 footer h3 {
- color: #0894d1;
   letter-spacing: 1px;
   margin: 30px 0 20px;
 }
@@ -63,4 +69,14 @@ footer .copyright {
   padding: 15px 0;
   margin-top: 20px;
   font-size: 15px;
+}
+
+.media-object {
+  border: 2px solid white;
+}
+
+.img-thumbnail {
+  height: 100px; 
+  width: 150px; 
+  border: 2px solid white;
 }
