--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,44 +1,73 @@
 <div class="text-white">
   <h2>Checkout</h2>
-  <hr>
-<mat-vertical-stepper [linear]="isLinear" #stepper color="accent">
-  <mat-step>
-    <form>
-      <ng-template matStepLabel>Revisá tus productos</ng-template>
-      <div class="mt-3 d-flex justify-content-between align-items-center w-100"
-      *ngFor="let itemcart of this.cartSer.cart.items">
-      
-      <div class="d-flex justify-content-center"> 
-        <img class="imgcartside" src="{{itemcart.product.image}}" alt=""> 
-        <button class="minifab b" mat-mini-fab color="accent"><b>{{itemcart.cantidad}}</b></button>
-
-      </div>
-      <div class="d-flex flex-column text-start w-50"> 
-        <b>{{itemcart.product.name}}</b> 
-        {{itemcart.product.contenido}}
-        {{itemcart.priceconjunto}}
-      </div>
-    </div>
-      <div>
-        <button class="m-3 border" (click)="this.dialogRef.close()" mat-button>Volver</button>
-        <button class="m-3 border" mat-button matStepperNext (click)="generateOrder()">Siguiente</button>
-      </div>
-    </form>
-  </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>Ir a pagar</ng-template>
-      <div class="m-0">
-        <h3 class="">Precio final:</h3>
-        <h2 class="">{{this.cartSer.cart.finalPrice.toFixed(2)}}</h2>
-      </div>
-      <div class="w-100 justify-content-center">
-        <button mat-raised-button color="accent" class="m-3" (click)="abrirPago()" [disabled]="!responser">Finalizar compra</button> 
-      </div>     
-      <div>
-        <button class="m-3 border" mat-button matStepperPrevious>Volver</button>
-      </div>
-    </form>
-  </mat-step>
-</mat-vertical-stepper>
-  
+  <hr />
+  <mat-vertical-stepper [linear]="isLinear" #stepper color="accent">
+    <mat-step>
+      <form>
+        <ng-template matStepLabel>Revisá tus productos</ng-template>
+        <div
+          class="mt-3 d-flex justify-content-between align-items-center w-100"
+          *ngFor="let itemcart of this.cartSer.cart.items"
+        >
+          <div class="d-flex justify-content-center">
+            <img
+              class="imgcartside"
+              src="{{ itemcart.product.image }}"
+              alt=""
+            />
+            <button class="minifab b" mat-mini-fab color="accent">
+              <b>{{ itemcart.cantidad }}</b>
+            </button>
+          </div>
+          <div class="d-flex flex-column text-start w-50">
+            <b>{{ itemcart.product.name }}</b>
+            {{ itemcart.product.contenido }}
+            {{ itemcart.priceconjunto }}
+          </div>
+        </div>
+        <div>
+          <button
+            class="m-3 border"
+            (click)="this.dialogRef.close()"
+            mat-button
+          >
+            Volver
+          </button>
+          <button
+            class="m-3 border"
+            mat-button
+            matStepperNext
+            (click)="generateOrder()"
+          >
+            Siguiente
+          </button>
+        </div>
+      </form>
+    </mat-step>
+    <mat-step [stepControl]="secondFormGroup">
+      <form [formGroup]="secondFormGroup">
+        <ng-template matStepLabel>Ir a pagar</ng-template>
+        <div class="m-0">
+          <h3 class="">Precio final:</h3>
+          <h2 class="">{{ this.cartSer.cart.finalPrice.toFixed(2) }}</h2>
+        </div>
+        <div class="w-100 justify-content-center">
+          <button
+            mat-raised-button
+            color="accent"
+            class="m-3"
+            (click)="abrirPago()"
+            [disabled]="!responser"
+          >
+            Finalizar compra
+          </button>
+        </div>
+        <div>
+          <button class="m-3 border" mat-button matStepperPrevious>
+            Volver
+          </button>
+        </div>
+      </form>
+    </mat-step>
+  </mat-vertical-stepper>
+</div>
