--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,83 +2,29 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-6">
-        <h3>Site Map</h3>
-        <ul class="list-unstyled three-column">
-          <li>Home</li>
-          <li>Services</li>
-          <li>About</li>
+        <h3>Help</h3>
+        <ul class="list-unstyled three-column d-flex flex-column">
+          <li>Shipments and Deliveries</li>
+          <li>Refunds</li>
+          <li>Product Change</li>
           <li>Code</li>
-          <li>Design</li>
-          <li>Host</li>
+          <li>Contact</li>
+          <li>Costumer Defense</li>
           <li>Contact</li>
           <li>Company</li>
         </ul>
       </div>
 
       <div class="col-lg-4 col-md-6">
-        <h3>Latest Articles</h3>
-        <div class="d-flex">
-          <div class="media m-1">
-            <a href="https://web.growcast.io/" class="pull-left">
-              <img
-                src=""
-                style="border: 2px solid white"
-                alt=""
-                class="media-object"
-                width="70"
-              />
-            </a>
-            <div class="media-body">
-            </div>
-          </div>
-
-          <div class="media m-1">
-            <a href="https://ceis.ar/" class="pull-left">
-              <img
-                src=""
-                alt=""
-                class="media-object"
-                style="border: 2px solid white"
-                width="70"
-              />
-            </a>
-            <div class="media-body">
-              <h4 class="media-heading"></h4>
-            </div>
-          </div>
-        </div>
+          <h3>About Nike</h3>
+          <ul class="list-unstyled three-column d-flex flex-column">
+            <li>Purpose</li>
+            <li>News</li>
+          </ul>
       </div>
 
       <div class="col-lg-4">
         <h3>Our Work</h3>
-        <a href="https://ibb.co/G2K7cHK"
-          ><img
-            style="height: 100px; width: 150px; border: 2px solid white"
-            class="img-thumbnail m-1"
-            src=""
-            alt="DSC-3080"
-        /></a>
-        <a href="https://ibb.co/ch58sK6"
-          ><img
-            style="height: 100px; width: 150px; border: 2px solid white"
-            src=""
-            class="img-thumbnail m-1"
-            alt="DSC-3040"
-        /></a>
-        <a href="https://ibb.co/4P8pDbZ"
-          ><img
-            style="height: 100px; width: 150px; border: 2px solid white"
-            class="img-thumbnail m-1"
-            src=""
-            alt="DSC-2940"
-        /></a>
-        <a href="https://ibb.co/30PBcJ3"
-          ><img
-            style="height: 100px; width: 150px; border: 2px solid white"
-            class="img-thumbnail m-1"
-            src=""
-            alt="DSC-3016"
-        /></a>
       </div>
     </div>
   </div>
