--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,6 +2,26 @@ a {
     width: 9rem;
   }
 
+nav {
+  min-height: 4rem;
+}
+
+.logo-nav {
+  width: 6rem; 
+  border-radius: 1rem;
+  margin-left: 2.5rem;
+}
+
+.nav-toggle-btn {
+  width: 2.5rem;
+  border-radius: 0.5rem;
+}
+
 button {
   color: black;
+}
+
+button:disabled {
+  
+  color: grey;
 }
