--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-light" style="min-height: 7rem">
+
+<nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid align-items-center">
+    <div class="w-25 d-flex justify-content-center">
     <img
-      class=""
+      class="logo-nav"
       src="https://nikearprod.vtexassets.com/assets/vtex/assets-builder/nikearprod.store/2.0.63/icons/Assets_for_off%20platform/swoosh___33f7ffaf2fc124733c2c4a60a12a1160.svg"
       alt=""
-      style="width: 8rem; border-radius: 1rem"
     />
+  </div>
     <button
       class="navbar-toggler border-0 m-0"
       type="button"
@@ -16,51 +18,89 @@
       aria-label="Toggle navigation"
     >
       <img
+        class="nav-toggle-btn"
         src="https://i.ibb.co/5RVfDLR/Recurso-10.png"
         alt="Recurso-10"
-        style="width: 2.5rem; border-radius: 0.5rem"
       />
     </button>
     <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
       <ul
         class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-around w-100"
       >
-        <li class="nav-item">
-          <button mat-stroked-button color="basic" routerLink="/">
-            <a class="nav-link text-black" aria-current="page">
-              <i class="bi bi-house-door-fill border rounded p-1"></i>
-              Inicio</a
-            >
-          </button>
+        <li class="nav-item w-25">
+          <button mat-raised-button class="text-black w-75 btn btn-primary bg-white" mat-button routerLink="/">
+            <i class="bi bi-house-door-fill rounded p-1"></i>
+            <b>Home</b></button> 
         </li>
-        <li class="nav-item">
-          <button mat-stroked-button color="basic" routerLink="/tienda">
-            <a class="nav-link text-black active" aria-current="page">
-              <i class="bi bi-shop border rounded p-1"></i>
-              Tienda</a
-            >
-          </button>
+        <li class="w-25">
+          <div>
+            <button mat-raised-button class="text-black w-75 btn btn-primary dropdown-toggle bg-white" mat-button [matMenuTriggerFor]="store">
+              <i class="bi bi-shop rounded p-1"></i>
+              <b>Store</b></button>
+
+          <mat-menu #store="matMenu" class="bg-light text-black">
+            <button *ngFor="let item of navbarMenu" class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombre" [disabled]="item.name !== 'hombre'">{{item.name}}</button>
+          </mat-menu>
+
+          <mat-menu #mujeres="matMenu" class="bg-light">
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombresdestacados">Destacados</button>
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombrescalzados">Calzados</button>
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="reptiles">Ropa</button>
+          </mat-menu>
+
+          <mat-menu #hombre="matMenu" class="bg-light">
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombresdestacados" disabled>Destacados</button>
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombrescalzados" routerLink="/tienda">Calzados</button>
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="reptiles" disabled>Ropa</button>
+          </mat-menu>
+          
+          <mat-menu #ninoas="matMenu" class="bg-light">
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombresdestacados">Destacados</button>
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="hombrescalzados">Calzados</button>
+            <button class="dropdown-toggle" mat-menu-item [matMenuTriggerFor]="reptiles">Ropa</button>
+          </mat-menu>
+          
+          <mat-menu #sale="matMenu" class="bg-light">
+            <button class="dropdown-toggle" mat-menu-item>SALE</button>
+            <button class="dropdown-toggle" mat-menu-item>Hombres</button>
+            <button class="dropdown-toggle" mat-menu-item>Mujeres</button>
+            <button class="dropdown-toggle" mat-menu-item>Niño/a</button>
+          </mat-menu>
+          
+          <mat-menu #hombresdestacados="matMenu" class="bg-light">
+            <button mat-menu-item>Ver todo hombre</button>
+            <button mat-menu-item>Lo nuevo</button>
+            <button mat-menu-item>Lo más vendido</button>
+            <button mat-menu-item>Íconos</button>
+            <button mat-menu-item>Jordan</button>
+            <button mat-menu-item>Eventos Nike</button>
+          </mat-menu>
+          
+          <mat-menu #hombrescalzados="matMenu" class="bg-light">
+            <button mat-menu-item disabled>-</button>
+            <button mat-menu-item disabled>-</button>
+            <button mat-menu-item disabled>-</button>
+            <button mat-menu-item disabled>-</button>
+          </mat-menu>
+          
+          <mat-menu #reptiles="matMenu" class="bg-light">
+            <button mat-menu-item>Banded Day Gecko</button>
+            <button mat-menu-item>Banded Gila Monster</button>
+            <button mat-menu-item>Black Tree Monitor</button>
+            <button mat-menu-item>Blue Spiny Lizard</button>
+            <button mat-menu-item disabled>Velociraptor</button>
+          </mat-menu>
+          </div>
         </li>
-        <li class="nav-item">
-          <button mat-stroked-button color="basic" routerLink="/nosotros">
-            <a class="nav-link text-black active" aria-current="page">
-              <i class="bi bi-person-arms-up border rounded p-1"></i>
-              Nosotros</a
-            >
-          </button>
-        </li>
-        <li class="nav-item">
-          <button mat-stroked-button color="basic" routerLink="/contacto">
-            <a class="nav-link text-black active" aria-current="page">
-              <i class="bi bi-telephone border rounded p-1"></i>
-              Contacto</a
-            >
-          </button>
-        </li>
-        <li class="nav-item">
-          <button mat-stroked-button routerLink="/blog">
-            <a class="nav-link text-black active" aria-current="page">Blog</a>
-          </button>
+    <!--    <li class="nav-item">
+          <button mat-raised-button class="text-black btn btn-primary bg-white" mat-button routerLink="/nosotros">
+            <i class="bi bi-person-arms-up rounded p-1"></i>
+            <b>About Us</b></button>
+        </li> -->
+        <li class="nav-item w-25">
+          <button mat-raised-button class="text-black btn btn-primary bg-white w-75" mat-button routerLink="/contacto">
+            <i class="bi bi-telephone rounded p-1"></i>
+            <b>Contact</b></button>
         </li>
       </ul>
     </div>
