--- a/src/app/components/tiendacomp/tiendacomp.component.css
+++ b/src/app/components/tiendacomp/tiendacomp.component.css
@@ -1,13 +1,42 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: var(--background-light);
+  font-family: var(--font-family-base);
+  margin: 0;
+}
+
+mat-card {
+  background-color: whitesmoke;
+}
+
 .card {
-  width: 44rem;
+  width: 18rem;
+  height: 30rem;
+  margin-bottom: 1rem;
+}
+
+.card-details {
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-product-price {
+  border-radius: 3rem;
+  border: 3px solid white;
+  background-color: whitesmoke;
 }
 
 .card-img-top {
   width: 100%;
   height: 14rem;
   border-radius: 1rem;
-  margin: 0.5rem;
   border: 2px solid white;
+  cursor: pointer;
 }
 
 .ratio {
@@ -16,14 +45,10 @@
   top: 3rem;
 }
 
-.success-snackbar {
-  --mdc-snackbar-container-color: green !important;
-  --mdc-snackbar-supporting-text-color: white !important;
-  --mat-mdc-snack-bar-button-color: white !important;
-  white-space: pre-wrap
+.title-product {
+  font-size: medium;
 }
 
-.snackbar-error {
-  background-color: #F44336 !important  ; /* Rojo */
-  color: #FFFFFF; /* Blanco */
+button {
+  cursor: pointer;
 }
