--- a/src/app/views/contacto/contacto.component.html
+++ b/src/app/views/contacto/contacto.component.html
@@ -1,9 +1,8 @@
-<div class="container">
+<div class="container text-black">
   <div class="w-100 d-flex justify-content-end">
-    <h2 class="titulo mb-4">Contacto</h2>
+    <h2 class="titulo mb-4">Contact</h2>
   </div>
 
-  <hr />
   <div class="w-100 d-flex justify-content-center">
     <mat-card class="bg-light">
       <mat-card-content>
