--- a/src/app/views/inicio/inicio.component.css
+++ b/src/app/views/inicio/inicio.component.css
@@ -2,9 +2,10 @@
 
 h1 {
   margin-top: 3rem;
-  font-size: 2.3rem;
-  font-weight: 700;
-}
+  font-size: 4rem;
+  font-family: "Anton SC", sans-serif;
+  font-weight: 400;
+  font-style: normal;}
 
 .expo {
   font-size: 6rem;
