--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-
+<div class="container text-black">
   <div
     class="d-flex flex-column w-100 justify-content-center align-items-center"
   >
@@ -8,19 +7,18 @@
       style="color: whitesmoke"
     >
       <div class="w-100 text-white" [@enterState]>
-
-        <img class="w-100 banner-sales mt-4 mb-4" src="https://nikearprod.vtexassets.com/assets/vtex.file-manager-graphql/images/9b2a473c-c28f-4aff-bdd2-9650fd42b7d8___4ec106d1bcf4d00204e0573038449ee2.jpg" alt="" />
-
+        <img
+          class="w-100 banner-sales mt-4 mb-4"
+          src="https://nikearprod.vtexassets.com/assets/vtex.file-manager-graphql/images/9b2a473c-c28f-4aff-bdd2-9650fd42b7d8___4ec106d1bcf4d00204e0573038449ee2.jpg"
+          alt=""
+        />
       </div>
-      <div class="w-100">
-        <h1 class="text-white" [@enterStateTwo]>FEEL THE UNREAL</h1>
+      <div class="w-100 text-black">
+        <h1 [@enterStateTwo]>FEEL THE UNREAL</h1>
         <hr />
 
         <h3 class="m-4">
-          Nuestros productos contienen
-          <b style="color: #a3afd2">diferentes perfiles</b> de cannabinoides
-          para el tratamiento de diversas patologías. Te invitamos a explorar
-          nuestro catálogo.
+          <a href="">Conocé las promociones bancarias</a>
         </h3>
       </div>
     </div>
