--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -1,9 +1,48 @@
-<div class="container">
-  <div class="w-100 d-flex justify-content-end">
-    <h2 class="titulo mb-4">Tienda</h2>
-  </div>
-
-  <hr />
-
-  <app-tiendacomp></app-tiendacomp>
-</div>
+<mat-drawer-container autosize>
+  <mat-drawer
+    class="w-25 bg-white text-black"
+    #drawer
+    mode="side"
+    opened
+    (openedChange)="onDrawerToggle($event)"
+  >
+    <div class="row">
+      <div class="col-xl-2 d-flex justify-content-between align-items-center w-100 mt-1">
+        <h1>Filters</h1>
+        <a href=""><p>Clean Filters</p></a>
+      </div>
+    </div>
+    <div class="example-action-buttons">
+      <button mat-button (click)="accordion().openAll()">Expand All</button>
+      <button mat-button (click)="accordion().closeAll()">Collapse All</button>
+    </div>
+    <mat-accordion *ngFor="let item of accordionFilters" multi>
+      <mat-expansion-panel class="text-black">
+        <mat-expansion-panel-header>
+          <mat-panel-description>
+            <b>{{item.name}}</b>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <ng-container *ngIf="item.name === 'Sale'">
+          <mat-checkbox class="border">
+            <span class="text-black"></span>
+          </mat-checkbox>
+        </ng-container>
+      </mat-expansion-panel>
+    </mat-accordion>  
+  </mat-drawer>
+  <mat-drawer-content>
+    <div class="container text-black">
+      <div class="w-100 d-flex flex-column justify-content-end align-items-end">
+        <h2 class="titulo mb-4">Store</h2>
+        
+          <mat-icon>filter_list</mat-icon>
+          <h4 mat-icon-button (click)="drawer.toggle()">
+            {{ filtersState }} filters
+          </h4>
+          <button class="btn btn-primary bg-dark border-0">Order by Most Recent</button>
+      </div>
+      <app-tiendacomp class="col-xl-10"></app-tiendacomp>
+    </div>
+  </mat-drawer-content>
+</mat-drawer-container>
