responsive item selected view

--- a/src/app/views/ProductSelected/productselected.component.css
+++ b/src/app/views/ProductSelected/productselected.component.css
@@ -1,3 +1,5 @@
+* {}
+
 .noAvailableSize {
     background-color: grey;
     cursor:not-allowed;
@@ -9,3 +11,26 @@
     cursor: pointer;
 }
 
+.cuotas-cartel {
+    height: 4rem;
+}
+
+@media (max-width: 576px) {
+
+    .miniimgs {
+        display: none;
+    }
+
+    .size {
+        width: 20%;
+    }
+
+    .div-half-one {
+        width: 100%;
+    }
+
+    .div-half-two {
+        width: 100%;
+    }
+
+}
